src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_1_syntax_analysis.snap
---
source: src/tests/closure/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "newAdder",
            expression: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Function {
                                parameters: [
                                    "y",
                                ],
                                block: Block {
                                    nodes: [
                                        Expression {
                                            expression: Infix {
                                                left_hand: Identifier {
                                                    identifier: "x",
                                                },
                                                operator: Plus,
                                                right_hand: Identifier {
                                                    identifier: "y",
                                                },
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "addTwo",
            expression: Call {
                function: Identifier {
                    identifier: "newAdder",
                },
                arguments: [
                    Integer {
                        literal: 2,
                    },
                ],
            },
        },
    },
    Expression {
        expression: Call {
            function: Identifier {
                identifier: "addTwo",
            },
            arguments: [
                Integer {
                    literal: 3,
                },
            ],
        },
    },
]
