src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_2_environment.snap
---
source: src/tests/closure/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "addThree": Function {
                    parameters: [
                        "y",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Plus,
                                    right_hand: Identifier {
                                        identifier: "y",
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
                "addTwo": Function {
                    parameters: [
                        "y",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Plus,
                                    right_hand: Identifier {
                                        identifier: "y",
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
                "newAdder": Function {
                    parameters: [
                        "x",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Function {
                                    parameters: [
                                        "y",
                                    ],
                                    block: Block {
                                        nodes: [
                                            Expression {
                                                expression: Infix {
                                                    left_hand: Identifier {
                                                        identifier: "x",
                                                    },
                                                    operator: Plus,
                                                    right_hand: Identifier {
                                                        identifier: "y",
                                                    },
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
