src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_3_environment.snap
---
source: src/tests/closure/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "makeCounter": Function {
                    parameters: [],
                    block: Block {
                        nodes: [
                            Statement {
                                statement: Let {
                                    identifier: "count",
                                    expression: Integer {
                                        literal: 7,
                                    },
                                },
                            },
                            Expression {
                                expression: Function {
                                    parameters: [],
                                    block: Block {
                                        nodes: [
                                            Expression {
                                                expression: Identifier {
                                                    identifier: "count",
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
